--- a/hm.tex
+++ b/hm.tex
@@ -869,7 +869,10 @@ This principle, introduced by Hamilton in 1834, suggests that a mechanical syste
         \end{equation}
         where $\times$ denotes the usual vector product in $\mathbb{R}^3$ and, as mentioned above, $\vb* B = \curl \vb* A$ is the magnetic field.
 
-        The additional term $\frac ec \dot{\vb*{x}}_k\times \vb* B(\vb*{x}_k)$ is the \emphidx{Lorenz force} acting on the $k$th particle of charge $e$ immersed in the magnetic field $\vb* B$. By definition, the Lorenz force is orthogonal to the velocity of the particle and to the magnetic field and thus tends to curve the trajectory of the particle.
+        The additional term $\frac ec \dot{\vb*{x}}_k\times \vb* B(\vb*{x}_k)$ is the \emphidx{Lorentz force} acting on the $k$th particle of charge $e$ immersed in the magnetic field $\vb* B$. By definition, the Lorenz force is orthogonal to the velocity of the particle and to the magnetic field and thus tends to curve the trajectory of the particle.
+
+        \warpHTMLonly{<p><iframe scrolling=no title=The Lorentz force src=https://www.geogebra.org/material/iframe/id/axnqyhdx/width/1100/height/800/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false width=1100px height=800px style=border:0px;> </iframe></p>
+        <p>In the simulation above you can see how the Lorentz force can affect a charged particle motion in a uniform magnetic field. For an easy comparison two different particles are shown, with independent parameters but immersed in the same magnetic field. The value $q = e/c$ corresponds to the charge of the particle. The standalone version of this applet is <a href=https://www.geogebra.org/m/tvbfjfct>available on geogebra</a> and was derived from an <a href=https://www.geogebra.org/m/xpRMzPgc>applet by Luca Moroni</a>.</p>}
 
         For a beautiful geometric discussion of this problem, you can refer to \cite[Chapter 8.3]{book:amr} (this has moved to Chapter 9.3 in more recent editions).
       \end{exercise}
